--- a/style.css
+++ b/style.css
@@ -48,4 +48,24 @@ main {
     margin-bottom: 10px;
     color: #0077cc;
 }
-
+footer{
+    background-color: #333;
+    color: white;
+    text-align: center;
+    padding: 15px;
+    margin-top: 30px;
+}
+/* Responsividade */
+@media (max-width: 600px) {
+    nav ul {
+        flex-direction:  column;
+    }
+    nav ul li {
+        margin: 10px 0;
+    }
+    main {
+        padding: 5px;
+    }
+    
+    
+}
