--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     box-sizing: border-box;
 }
 body {
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial,  sans-serif;
     line-height: 1.6;
     background-color: #f4f4f4;
     color: #333;
