--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ main {
     border-radius: 5px;
     box-shadow:  0 0 5px rgba(0,0,0,0.1);
 }
-.curiosidade {
+.curiosidade h2 {
     margin-bottom: 10px;
     color: #0077cc;
 }
