--- a/style.css
+++ b/style.css
@@ -36,7 +36,11 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
 }
+nav ul li:hover {
 
+    color: blue;
+
+}
 main {
     max-width: 800px;
     margin: 20px auto;
@@ -64,6 +68,7 @@ footer {
     padding: 15px;
     margin-top: 30px;
 }
+
 
 /* Responsividade */
 @media (max-width: 600px) {
