--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ nav ul li a {
     text-decoration: none;
     font-weight: bold;
 }
-nav ul li:hover {
+nav ul li a :hover {
 
     color: blue;
 
