--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #f4f4f4;
     color: #333;
 }
-
+/* Cabeçalho */
 header {
     background-color: #0077cc;
     color: white;
