--- a/style.css
+++ b/style.css
@@ -40,6 +40,25 @@ nav ul li a {
 nav ul li a:hover {
     color: #00FFFF;
 }
+ /* galeria */
+ .galeria {
+  display: grid;
+  grid-template-columns: repeat(auto-fist, minmax(250px,1fr));
+  gap: 20px;
+  padding: 40px;
+  text-align: center;
+  background-color: #f9f9f9;
+ }
+ .galeria {
+  text-decoration: none;
+  color: black;
+ }
+ .galeria{
+    width: 250px;
+    height: 250px;
+    border-radius: 10px;
+    
+ }
 
 main {
     max-width: 800px;
